name:                http-reverse-proxy
version:             0.6.0.1
synopsis:            Reverse proxy HTTP requests, either over raw sockets or with WAI
description:         Provides a simple means of reverse-proxying HTTP requests. The raw approach uses the same technique as leveraged by keter, whereas the WAI approach performs full request/response parsing via WAI and http-conduit.
homepage:            https://github.com/fpco/http-reverse-proxy
license:             BSD3
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md ChangeLog.md

library
  default-language:    Haskell2010
  exposed-modules:     Network.HTTP.ReverseProxy
  other-modules:       Paths_http_reverse_proxy
  if impl(ghc < 8)
    buildable: False
  build-depends:       base                   >= 4.11   && < 5
                     , text                   >= 0.11
                     , bytestring             >= 0.9
                     , case-insensitive       >= 0.4
                     , http-types             >= 0.6
                     , word8                  >= 0.0
                     , blaze-builder          >= 0.3
                     , http-client            >= 0.3
                     , wai                    >= 3.0
                     , network
                     , conduit                >= 1.3
                     , conduit-extra
                     , wai-logger
                     , resourcet
                     , containers
                     , unliftio               >= 0.2
                     , transformers
                     , streaming-commons

test-suite test
    default-language:    Haskell2010
    type: exitcode-stdio-1.0
    main-is: main.hs
    hs-source-dirs: test
    build-depends: base < 10
                 , http-reverse-proxy
                 , wai
                 , http-types
                 , hspec                      >= 1.3
                 , warp                       >= 2.1
                 , bytestring
                 , conduit                    >= 1.1
                 , conduit-extra
                 , blaze-builder
                 , transformers
                 , unliftio
                 , network
                 , http-conduit               >= 2.3
                 , resourcet
                 , streaming-commons

source-repository head
  type:     git
  location: git://github.com/fpco/http-reverse-proxy.git
