name:               http-reverse-proxy
version:            0.6.2.0
synopsis:
  Reverse proxy HTTP requests, either over raw sockets or with WAI

description:
  Provides a simple means of reverse-proxying HTTP requests. The raw approach uses the same technique as leveraged by keter, whereas the WAI approach performs full request/response parsing via WAI and http-conduit.

homepage:           https://github.com/fpco/http-reverse-proxy
license:            BSD3
license-file:       LICENSE
author:             Michael Snoyman
maintainer:         michael@fpcomplete.com
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  ChangeLog.md
  README.md

library
  default-language: Haskell2010
  exposed-modules:  Network.HTTP.ReverseProxy
  other-modules:    Paths_http_reverse_proxy

  if impl(ghc <8)
    buildable: False

  build-depends:
      base               >=4.11 && <5
    , blaze-builder      >=0.3  && <0.5
    , bytestring         >=0.9  && <0.13
    , case-insensitive   >=0.4  && <1.3
    , conduit            >=1.3  && <1.4
    , conduit-extra      <1.4
    , containers         <0.9
    , http-client        >=0.3  && <0.8
    , http-types         >=0.6  && <0.13
    , network            <3.3
    , resourcet          <1.4
    , streaming-commons  <0.3
    , text               >=0.11 && <2.2
    , transformers       <0.7
    , unliftio           >=0.2  && <0.3
    , wai                >=3.0  && <3.3
    , wai-logger         >=2.0  && <2.6
    , word8              >=0.0  && <0.2

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          main.hs
  hs-source-dirs:   test
  build-depends:
      base                <10
    , blaze-builder
    , bytestring
    , conduit             >=1.1
    , conduit-extra
    , hspec               >=1.3
    , http-conduit        >=2.3
    , http-reverse-proxy
    , http-types
    , network
    , resourcet
    , streaming-commons
    , transformers
    , unliftio
    , wai
    , warp                >=2.1

source-repository head
  type:     git
  location: https://github.com/fpco/http-reverse-proxy.git
